--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,21 +1,24 @@
 {
-    "yourTodoList": "Tu lista de tareas",
-    "save": "Guardar",
-    "youDontHavePlans": "No tienes planes",
-    "performance": "Rendimiento",
-    "finishDate": "Fecha de finalización",
-    "creationDate": "Fecha de creación",
-    "hideDoneTasks": "Ocultar tareas completadas",
-    "readyDateX": "Fecha prevista: {date}",
-    "edit": "Editar",
-    "delete": "Eliminar",
-    "error": "¡Error!",
-    "noAccountYet": "¿Aún no tienes cuenta?",
-    "signUp": "Registrarse",
-    "signIn": "Iniciar sesión",
-    "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
-    "logIn": "Iniciar sesión",
-    "title": "Título",
-    "pleaseEnterText": "Por favor, ingresa texto",
-    "description": "Descripción"
-    }
+  "yourTodoList": "Tu lista de tareas",
+  "save": "Guardar",
+  "youDontHavePlans": "No tienes planes",
+  "performance": "Rendimiento",
+  "finishDate": "Fecha de finalización",
+  "creationDate": "Fecha de creación",
+  "hideDoneTasks": "Ocultar tareas completadas",
+  "readyDateX": "Fecha prevista: {date}",
+  "edit": "Editar",
+  "delete": "Eliminar",
+  "error": "¡Error!",
+  "noAccountYet": "¿Aún no tienes cuenta?",
+  "signUp": "Registrarse",
+  "signIn": "Iniciar sesión",
+  "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
+  "logIn": "Iniciar sesión",
+  "title": "Título",
+  "pleaseEnterText": "Por favor, ingresa texto",
+  "description": "Descripción",
+  "email": "Correo electrónico",
+  "password": "Contraseña",
+  "repeatPassword": "Repetir contraseña"
+}
