--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,21 +1,24 @@
 {
-    "yourTodoList": "قائمة المهام الخاصة بك",
-    "save": "حفظ",
-    "youDontHavePlans": "لا توجد لديك خطط",
-    "performance": "الأداء",
-    "finishDate": "تاريخ الانتهاء",
-    "creationDate": "تاريخ الإنشاء",
-    "hideDoneTasks": "إخفاء المهام المنجزة",
-    "readyDateX": "تاريخ الاستعداد: {date}",
-    "edit": "تحرير",
-    "delete": "حذف",
-    "error": "خطأ!",
-    "noAccountYet": "ليس لديك حساب بعد؟",
-    "signUp": "اشترك",
-    "signIn": "تسجيل الدخول",
-    "alreadyHaveAnAccount": "لديك حساب بالفعل؟",
-    "logIn": "تسجيل الدخول",
-    "title": "العنوان",
-    "pleaseEnterText": "الرجاء إدخال النص",
-    "description": "الوصف"
-    }
+  "yourTodoList": "قائمة المهام الخاصة بك",
+  "save": "حفظ",
+  "youDontHavePlans": "لا توجد لديك خطط",
+  "performance": "الأداء",
+  "finishDate": "تاريخ الانتهاء",
+  "creationDate": "تاريخ الإنشاء",
+  "hideDoneTasks": "إخفاء المهام المنجزة",
+  "readyDateX": "تاريخ الاستعداد: {date}",
+  "edit": "تحرير",
+  "delete": "حذف",
+  "error": "خطأ!",
+  "noAccountYet": "ليس لديك حساب بعد؟",
+  "signUp": "اشترك",
+  "signIn": "تسجيل الدخول",
+  "alreadyHaveAnAccount": "لديك حساب بالفعل؟",
+  "logIn": "تسجيل الدخول",
+  "title": "العنوان",
+  "pleaseEnterText": "الرجاء إدخال النص",
+  "description": "الوصف",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "repeatPassword": "أعد كلمة المرور"
+}
