add setting with language and colorTheme

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -20,5 +20,9 @@
   "description": "الوصف",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
-  "repeatPassword": "أعد كلمة المرور"
+  "repeatPassword": "أعد كلمة المرور",
+  "selectColor": "اختر اللون",
+  "selectLanguage": "اختر اللغة",
+  "settings": "الإعدادات",
+  "logOut": "تسجيل الخروج"
 }
